--- a/templates/login.html
+++ b/templates/login.html
@@ -139,7 +139,7 @@
 			<div class="logD logDtip">
 				<p class="p1">登录</p>
 			</div>
-		    <form name="info" action="/login/" method="get">
+		    <form name="info" action="/Login" method="get">
 			<!-- 输入框 -->
 				{% if result is 'error' %}
 				<script>alert("账号或密码错误!")</script>
@@ -155,7 +155,7 @@
 					placeholder="输入密码" />
 			</div>
 			<div class="logC">
-				<a><button type="submit" formmethod="post" href="/Login" onclick="logconfir()">登  陆</button></a>
+				<a><button type="submit" formmethod="post"  onclick="logconfir()">登  陆</button></a>
 			</div>
 			</form>
 		</div>
