--- a/templates/login.html
+++ b/templates/login.html
@@ -139,7 +139,8 @@
 			<div class="logD logDtip">
 				<p class="p1">登录</p>
 			</div>
-		    <form name="info" action="/login/" method="get">
+		    <form name="info" action="/Login/" method="post">
+            {% csrf_token %}
 			<!-- 输入框 -->
 				{% if result is 'error' %}
 				<script>alert("账号或密码错误!")</script>
@@ -155,7 +156,7 @@
 					placeholder="输入密码" />
 			</div>
 			<div class="logC">
-				<a><button type="submit" onclick="logconfir()">登  陆</button></a>
+				<a><button type="submit" formmethod="post"  onclick="logconfir()">登  陆</button></a>
 			</div>
 			</form>
 		</div>
@@ -178,16 +179,20 @@
   </form>
 </div>
 
+<script>
 function logconfir()
 {
-var aa=document.forms['info'];
-if(aa.name.value==""){
- alert('账号不能为空');
+     var aa=document.forms['info'];
+     if(aa.name.value==""){
+         alert('账号不能为空');
+      }
+     else{
+         if (aa.password.value == "") {
+              alert('密码不能为空');
+         }
+     }
 }
-else if (aa.password.value == "") {
-        alert('密码不能为空');
-    }
-}
+</script>
 
 </body>
 </html>
