--- a/templates/Report.html
+++ b/templates/Report.html
@@ -15,7 +15,7 @@
 
                 <hr>
 
-                <a href="HotelManager.html" target="_self" type="button" class="btn btn-success pull-right">返回</a>
+                <a href="../" target="_self" type="button" class="btn btn-success pull-right">返回</a>
                 <table class="table table-hover">
                     <thead>
                     <tr>
@@ -38,8 +38,7 @@
                     <td>{{reachtemtimes}}</td>
                     <td>{{notesnum}}</td>
                     <td>{{totalcost}}</td>
-                </tr>
-                 {% endif  %}
+                </tr>
                 </tbody>
 
                 </table> 
