--- a/templates/Customer.html
+++ b/templates/Customer.html
@@ -148,48 +148,48 @@
 	<div class="logGet">
 			<!-- 头部提示信息 -->
 			<div class="logD logDtip">
-				<p class="p1">亲爱的：<a>{{precus.room}}</a>用户，欢迎光临</p>
+				<p class="p1">亲爱的：<a>{{ID}}</a>用户，欢迎光临</p>
 			</div>
             <div class="logD logDtip">
-				<p class="p1">当前室温：<a>{{currenttemp}}</a>当前空调状态：<a>{{precus.On}}</a>当前预期温度：<a>{{targettemp}}</a>当前预期风速：<a>{{targetwind}}</a></p>
+				<p class="p1">当前室温：<a>{{currenttemp}}</a>当前空调状态：<a>{{On}}</a>当前预期温度：<a>{{targettemp}}</a>当前预期风速：<a>{{targetwind}}</a></p>
 			</div>
             <!-- 输入框 -->
             <div class="logC">
-				<a><button onclick="turn_on_kongtiao()">打开空调</button></a>
+                <a href="../TurnOn" target="_self" type="button" class="btn btn-success pull-right">打开空调</a>
 			</div>
-		    <form name="info1" action="/Customer/setTemp" method="get">
+		    <form name="info1" action="/Customer/setTemp/" method="post">
+                {% csrf_token %}
+                <input type="radio" name="radiomode" value="tocold" checked="checked">制冷
+                <input type="radio" name="radiomode" value="tohot">制热
 		    <div class="lgD">
 				<img src="{% static "img/pay.png" %}" width="20" height="20" alt=""/>
-				<input type="number" name="temp1" value="" oninput="if(value>26)value=26;if(value<18)value=18"
-					placeholder="输入预期制冷温度（18-26）" />
-			</div>
-				<div class="lgD">
-				<img src="{% static "img/pay.png" %}" width="20" height="20" alt=""/>
-				<input type="number" name="temp2" value="" oninput="if(value>30)value=30;if(value<26)value=26"
-					placeholder="输入预期制热温度（26-30）" />
+				<input type="number" name="temp" value="" oninput="if(value>36)value=36;if(value<16)value=16"
+					placeholder="输入目标温度（制冷：16-31，制热：21-36）" />
 			</div>
 			<div class="logC">
-				<a><button type="submit" formmethod="get"  onclick="logconfir1()">确认提交预期温度</button></a>
+				<a><button type="submit" formmethod="post"  onclick="logconfir1()">确认提交目标温度</button></a>
 			</div>
 				</form>
-				<form name="info2" action="/Customer/setWind" method="get" >
+				<form name="info2" action="/Customer/setWind/" method="post" >
+                    {% csrf_token %}
 		    <div class="lgD">
 				<img src="{% static "img/pay.png" %}" width="20" height="20" alt=""/>
 				<input type="number" name="wind" value="" oninput="if(value>3)value=3;if(value<1)value=1"
 					placeholder="输入预期风速（1：低速 2：中速 3：高速）" />
 			</div>
 			<div class="logC">
-				<a><button type="submit" formmethod="get"  onclick="logconfir2()">确认提交预期风速</button></a>
+				<a><button type="submit" formmethod="post"  onclick="logconfir2()">确认提交预期风速</button></a>
 			</div>
 			</form>
 			<div class="logC">
+                <a href="../getAccount" target="_self" type="button" class="btn btn-success pull-right">计费查询</a>
                 <a><button onclick="tankuang()">计  费  查  询</button></a>
 			</div>
            <div class="logC">
-				<a><button onclick="turn_off_kongtiao()">关闭空调</button></a>
+				<a href="../TurnOff" target="_self" type="button" class="btn btn-success pull-right">关闭空调</a>
 			</div>
             <div class="logC">
-				<a href="login.html" target="_self"><button>退  出  登  陆</button></a>
+				<a href="../../" target="_self"><button>退  出  登  陆</button></a>
 			</div>
 		</div>
 </div>
@@ -314,12 +314,12 @@ function logconfir2()
 -->
 <script>
     function turn_off_kongtiao(){
-    	 $.post("/Customer/TurnOff",{},function(request){
+    	 $.post("/Customer/TurnOff/",{},function(request){
 
 		  });
     }
     function turn_on_kongtiao(){
-    	 $.post("/Customer/TurnOn",{},function(request){
+    	 $.post("/Customer/TurnOn/",{},function(request){
 
 		  });
     }
@@ -329,15 +329,15 @@ function logconfir2()
 	    if (currenttemp>=targettemp){
 	    	turn_off_kongtiao();
 	    }
-		window.location.href = "/Customer";
+		window.location.href = "'/Customer/cus/{{ ID }}";
 
 	}, 1000);
 	function tankuang(){
-		$.post("/Customer/getAccount",{},function(request){
+		$.post("/Customer/getAccount/",{},function(request){
 			alert(result["cost"]);
 		  });
-
 	}
+
 </script>
 
 </body>
