--- a/templates/HotelManager.html
+++ b/templates/HotelManager.html
@@ -10,7 +10,7 @@
 	padding: 0;
 }
 #wrap {
-	height: 719px;
+	height: 1000px;
 	width: 100;
 	background-image: url({% static "1.jpg"%});
 	background-repeat: no-repeat;
@@ -26,12 +26,12 @@
 }
 #foot {
 	width: 100;
-	height: 126px;
+	height: 100px;
 	background-color: #CC9933;
 	position: relative;
 }
 #wrap .logGet {
-	height: 600px;
+	height: 900px;
 	width: 800px;
 	position: absolute;
 	background-color: #FFFFFF;
@@ -139,6 +139,7 @@
 				<p class="p1">亲爱的：经理，欢迎光临</p>
 			</div>
             <!-- 输入框 -->
+            当前默认温度:{{ temp }}
 		    <form action="/HotelManager/setTemp/" method="post">
                 {% csrf_token %}
 		    <div class="lgD">
@@ -150,6 +151,7 @@
 				<a><button type="submit" formmethod="post" >确认更改默认温度</button></a>
 			</div>
 			</form>
+            当前默认参数：{{ charge }}
             <form name="info1" action="/HotelManager/setCharge/" method="post">
                 {% csrf_token %}
 		    <div class="lgD">
